--- a/style.css
+++ b/style.css
@@ -5,11 +5,19 @@
 }
 body
 {
-    background-image: url();
+    background-image: url(clock2.jpeg);
     background-image: no-repeat;
     background-size: cover ;
     position: relative;
     width: 100%;
     height: 100vh;
     overflow: hidden;
+} 
+.row
+{
+    text-align: center;
+    justify-content: center;
+    padding-top:35%;
+    color: #ff1e00;
+    text-shadow: 0.05em 0 #eeea0c;
 }
